integration-tests/tests/errors/views/unhandled-rejection.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({}) %>
  <script id="scenario">
    setTimeout(function() {
      Promise.reject('rejection-value');
    });
  </script>
</head>
<body>
  <h1>Unhandled rejection</h1>
  <pre id="scenarioDisplay"></pre>
  <script>scenarioDisplay.innerHTML = scenario.innerHTML;</script>
</body>
</html>
